[package]
name = "async_mpsc_latency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kanal = { version = "0.1.0-pre8", optional = true }
once_cell = "1.18.0"
tokio = { version = "1.34.0", features = ["full"] }
